# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-test.yml
page_loader/: __init__.py  filename_generator.py  html_loader.py
page_loader/scripts/: page_loader.py
tests/: test_download.py
tests/fixtures/: test_file.html
