[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Mark Ionin <ioninmark91@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
requests = "^2.27.1"
pook = "^1.0.2"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
